--- a/app/src/main/res/layout/activity_view_movie.xml
+++ b/app/src/main/res/layout/activity_view_movie.xml
@@ -28,14 +28,15 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2.0"
             android:text="Name:"
+            android:textStyle="bold"
             android:textSize="8pt"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:id="@+id/nameAdd"
             android:textSize="8pt"/>
     </LinearLayout>
@@ -51,14 +52,15 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2.0"
             android:text="Year:"
+            android:textStyle="bold"
             android:textSize="8pt"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:id="@+id/yearAdd"
             android:textSize="8pt"/>
     </LinearLayout>
@@ -74,14 +76,15 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2.0"
             android:text="Filename:"
+            android:textStyle="bold"
             android:textSize="8pt"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:id="@+id/fileAdd"
             android:textSize="8pt"/>
     </LinearLayout>
